# restaurant-wait-list-unit-testing-example

./: .flake8  README.md  mypy.ini  pyproject.toml
restaurant_waitlist_notifier/: main.py
restaurant_waitlist_notifier/text_messages/: get_message.py  send.py
restaurant_waitlist_notifier/waitlists/parties/: get_party.py
tests/: test_main.py  test_main_with_test_clients.py  test_main_without_test_clients.py
unit_testing_disciplines/: main.py
unit_testing_disciplines/secrets/: get_secret.py  get_secrets.py
unit_testing_disciplines/text/: get_message.py  send.py
unit_testing_disciplines/text_messages/: get_message.py  send.py
unit_testing_disciplines/waitlist/party/: get_party.py
unit_testing_disciplines/waitlists/parties/: get_party.py
