[tool.poetry]
name = "unit-testing-disciplines"
version = "0.1.0"
description = ""
authors = ["f-enye <fpena34@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
fastapi = "^0.110.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.1.0"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240311"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
